# fair-rankings

./: README.md  pyproject.toml
fair_rankings/: __init__.py  algorithms.py  data.py  simulations.py
fair_rankings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_algorithms.py
