[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-rankings"
version = "0.1.0"
description = "Algorithms for fairness-constrained ranking maximisation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "networkx>=3.0",
    "ortools>=9.6",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
